# BennuGD

./: .gitignore  build-all.sh  build-android.sh  build-caanoo.sh  build-dingux-a320.sh  build-fedora-30.sh  build-linux-opensuse.sh  build-linux.sh  build-opendingux.sh  build-openwiz.sh  build-pandora.sh  build-static.sh  build-std-unix.sh  build-win32-cross-msys2.sh  build-win32-cross-opensuse.sh  build-win32-cross.sh  build-win32.sh  build-wiz.sh  caanoo-vars.sh  newBuild-debian.sh  open2xwiz-vars.sh
core/: COPYING  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  configure.in  libtool  make-fakedl.sh
core/bgdc/: Makefile  Makefile.in
core/bgdi/: Makefile  Makefile.in
core/bgdrtm/: Makefile  Makefile.in
core/common/: b_crypt.c  crypt.c  debug.c  files.c  varspace_file.c  xctype.c
core/include/: arrange.h  b_crypt.h  bgdcore.h  bgddl.h  commons_defs.h  crypt.h  dcb.h  dirs.h  dlvaracc.h  fake_dl.h  files.h  files_st.h  fmath.h  i_procdef.h  i_procdef_st.h  instance.h  instance_st.h  loadlib.h  offsets.h  pslang.h  sysprocs.h  sysprocs_st.h  typedef.h  typedef_st.h  varspace_file.h  xctype.h  xctype_st.h  xstrings.h
modules/: COPYING  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  configure.in  libtool
modules/libbgload/: Makefile.am  Makefile.in  bgload.c  bgload.h
modules/libblit/: Makefile  Makefile.am  Makefile.in  g_blit.c  g_blit.h  g_pixel.c  g_pixel.h  libblit.c  libblit.h  libblit_exports.h
modules/libdraw/: Makefile  Makefile.am  Makefile.in  libdraw.c  libdraw.h
modules/libfont/: Makefile  Makefile.am  Makefile.in  libfont.c  libfont.h  libfont_exports.h
modules/libgrbase/: Makefile  Makefile.am  Makefile.in  bitwise_map.h  g_bitmap.c  g_bitmap.h  g_blendop.c  g_blendop.h  g_clear.c  g_clear.h  g_conversion.c  g_conversion.h  g_grlib.c  g_grlib.h  g_pal.c  g_pal.h  g_region.h  libgrbase.c  libgrbase.h  libgrbase_exports.h  resolution.h
modules/libjoy/: Makefile.am  Makefile.in  libjoy.c  libjoy.h  libjoy_exports.h
modules/libkey/: Makefile  Makefile.am  Makefile.in  libkey.c  libkey.h  libkey_exports.h
modules/libmouse/: Makefile  Makefile.am  Makefile.in  libmouse.c  libmouse_exports.h
modules/librender/: Makefile  Makefile.am  Makefile.in  g_fade.c  g_fade.h  g_frame.c  g_frame.h  g_instance.c  g_instance.h  g_object.c  g_object.h  g_rects.c  g_rects.h  g_screen.c  g_screen.h  librender.c  librender.h  librender_exports.h  scaler.h  scaler_hq2x.c  scaler_hq2x.h  scaler_normal.c  scaler_normal.h  scaler_scale2x.c  scaler_scale2x.h  scaler_scanline.c  scaler_scanline.h
modules/libscroll/: Makefile  Makefile.am  Makefile.in  libscroll.c  libscroll.h  libscroll_exports.h
modules/libsdlhandler/: Makefile  Makefile.am  Makefile.in  libsdlhandler.c
modules/libtext/: Makefile  Makefile.am  Makefile.in  libtext.c  libtext.h  libtext_exports.h  libtext_la-g_text.loT
modules/libvideo/: Makefile  Makefile.am  Makefile.in  g_regions.c  g_regions.h  g_video.c  g_video.h  libvideo.h  libvideo_exports.h
modules/libwm/: Makefile  Makefile.am  Makefile.in  libwm.c  libwm_exports.h
modules/mod_blendop/: Makefile  Makefile.am  Makefile.in  mod_blendop.c  mod_blendop_exports.h
modules/mod_cd/: Makefile  Makefile.am  Makefile.in  mod_cd.c  mod_cd_exports.h
modules/mod_crypt/: Makefile.am  Makefile.in  mod_crypt.c  mod_crypt_exports.h
modules/mod_debug/: Makefile  Makefile.am  Makefile.in  mod_debug.c  mod_debug_exports.h  systexts.c
modules/mod_dir/: Makefile  Makefile.am  Makefile.in  mod_dir.c  mod_dir_exports.h
modules/mod_draw/: Makefile  Makefile.am  Makefile.in  mod_draw.c  mod_draw_exports.h
modules/mod_effects/: Makefile  Makefile.am  Makefile.in  mod_effects.c  mod_effects.h  mod_effects_exports.h
modules/mod_ffi/: Makefile  Makefile.am  Makefile.in  mod_ffi.c  readme.txt
modules/mod_file/: Makefile  Makefile.am  Makefile.in  mod_file.c  mod_file_exports.h
modules/mod_flic/: Makefile  Makefile.am  Makefile.in  mod_flic.c  mod_flic.h  mod_flic_exports.h
modules/mod_grproc/: Makefile  Makefile.am  Makefile.in  mod_grproc.c  mod_grproc_exports.h
modules/mod_joy/: Makefile  Makefile.am  Makefile.in  mod_joy.c  mod_joy_exports.h
modules/mod_key/: Makefile  Makefile.am  Makefile.in  mod_key.c  mod_key_exports.h
modules/mod_m7/: Makefile  Makefile.am  Makefile.in  mod_m7.c  mod_m7.h  mod_m7_exports.h
modules/mod_map/: Makefile  Makefile.am  Makefile.in  file_fnt.c  file_fpg.c  file_map.c  file_pal.c  file_pcx.c  file_png.c  mod_map.c  mod_map.h  mod_map_exports.h
modules/mod_math/: Makefile  Makefile.am  Makefile.in  mod_math.c  mod_math_exports.h
modules/mod_mathi/: Makefile.am  Makefile.in  mod_mathi.c  mod_mathi_exports.h
modules/mod_mem/: Makefile  Makefile.am  Makefile.in  mod_mem.c  mod_mem_exports.h
modules/mod_mouse/: Makefile  Makefile.am  Makefile.in  mod_mouse.c  mod_mouse_exports.h
modules/mod_path/: Makefile  Makefile.am  Makefile.in  mod_path.c  mod_path.h  mod_path_exports.h
modules/mod_proc/: Makefile  Makefile.am  Makefile.in  mod_proc.c  mod_proc.h  mod_proc_exports.h
modules/mod_rand/: Makefile  Makefile.am  Makefile.in  mod_rand.c  mod_rand_exports.h
modules/mod_regex/: Makefile  Makefile.am  Makefile.in  mod_regex.c  mod_regex_exports.h  regex.c  regex.h
modules/mod_say/: Makefile  Makefile.am  Makefile.in  mod_say.c  mod_say_exports.h
modules/mod_screen/: Makefile  Makefile.am  Makefile.in  mod_screen.c  mod_screen_exports.h
modules/mod_scroll/: Makefile  Makefile.am  Makefile.in  mod_scroll.c  mod_scroll_exports.h
modules/mod_sort/: Makefile  Makefile.am  Makefile.in  mod_sort.c  mod_sort_exports.h
modules/mod_sound/: Makefile  Makefile.am  Makefile.in  mod_sound.c  mod_sound_exports.h
modules/mod_string/: Makefile  Makefile.am  Makefile.in  mod_string.c  mod_string_exports.h
modules/mod_sys/: Makefile  Makefile.am  Makefile.in  mod_sys.c  mod_sys.h  mod_sys_exports.h
modules/mod_text/: Makefile  Makefile.am  Makefile.in  mod_text.c  mod_text_exports.h
(+87 files in other folders)
