AC_INIT(bennu,1.0.0)

AC_CONFIG_MACRO_DIR([m4])

AC_CANONICAL_SYSTEM
AC_ARG_PROGRAM

AC_LIBTOOL_WIN32_DLL
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL

AM_MAINTAINER_MODE

echo "Your machine: ${target_cpu} ${target_os}"

AC_ARG_ENABLE(debug, [  --enable-debug       enable use of Debug     (default: no)], enable_debug=$enableval, enable_debug=no)

AC_CHECK_TOOL(WINDRES, windres, )
AM_CONDITIONAL(HAVE_WINDRES, test "$WINDRES" != "")

dnl Aqui es donde se chequeara el SO, pero solo hay una opcion xD
case "$target_os" in
    linux-gnu*)
        COMMON_CFLAGS="-Wall -DTARGET_LINUX"
        COMMON_LDFLAGS="$COMMON_LDFLAGS -lc -ldl"

        case "$target_cpu" in
            *i386*)
                COMMON_CFLAGS="$COMMON_CFLAGS -m32"
                COMMON_LDFLAGS="$COMMON_LDFLAGS -m32 -L/lib32"
                ;;

            arm)
                COMMON_CFLAGS="$COMMON_CFLAGS $CFLAGS"
                COMMON_LDFLAGS="$COMMON_LDFLAGS $LDFLAGS"
                ;;

        esac
        ;;

    mingw32)
        INCLUDES="-I/usr/local/include"
	    COMMON_CFLAGS="$INCLUDES -DTARGET_WIN32 -DWIN32 -D_WIN32"
	    COMMON_LDFLAGS="-L/usr/local/lib -lshlwapi"
	    ;;

    mingw32msvc)
        INCLUDES="-I/usr/i586-mingw32msvc/include"
	    COMMON_CFLAGS="$INCLUDES -DTARGET_WIN32 -DWIN32 -D_WIN32"
	    COMMON_LDFLAGS="-L/usr/i586-mingw32msvc/lib -lshlwapi"
	    ;;

    dragonfly*)
        INCLUDES="-I/usr/local/include"
        COMMON_CFLAGS="-Wall -DTARGET_BSD"
	    COMMON_LDFLAGS="-L/usr/local/lib -lpthread"
	    ;;

    darwin*)
        INCLUDES="-I/usr/local/include"
        COMMON_CFLAGS="-Wall -DTARGET_MAC"
	    COMMON_LDFLAGS="-L/usr/local/lib"
	    ;;

esac

AM_INIT_AUTOMAKE(1.6)
#AM_INIT_AUTOMAKE(no-dependencies)

#AC_PROG_INSTALL

dnl Check for compilers
AC_PROG_CC

if test "x$enable_debug" = "xyes"; then
    CFLAGS+=" -g $INCLUDES"
else
    CFLAGS+=" -O2 -finline-functions -fno-strict-aliasing $INCLUDES"
fi

dnl librerias para todos

AC_CHECK_LIB(z, gzsetparams, [AC_CHECK_HEADER(zlib.h,ZLIBS="-lz",)], [AC_MSG_ERROR(zlib library not found)])
AC_CHECK_LIB(des, des_ecb_encrypt, [AC_CHECK_HEADER(des.h,DESLIBS="-ldes",)], [AC_MSG_ERROR(libdes library not found)])

dnl make these visible to all Makefiles

COMMON_LDFLAGS="$LDFLAGS $COMMON_LDFLAGS"
COMMON_CFLAGS="$CFLAGS $COMMON_CFLAGS"

AC_SUBST(COMMON_CFLAGS)
AC_SUBST(COMMON_LDFLAGS)
AC_SUBST(ZLIBS)
AC_SUBST(DESLIBS)

AC_OUTPUT([
Makefile
bgdrtm/Makefile
bgdrtm/src/Makefile
bgdc/Makefile
bgdc/src/Makefile
bgdi/Makefile
bgdi/src/Makefile
])

echo
echo Bennu $VERSION
echo
echo Debug Mode ....... : $enable_debug
echo
echo The binary will be installed in $prefix/bin
echo
echo configure complete, now type \'make\' and pray.
echo
