ACLOCAL_AMFLAGS=-I m4

SUBDIRS = \
    libgrbase       \
    libvideo        \
    libblit         \
    librender       \
    libdraw         \
    libfont         \
    libtext         \
    libsdlhandler   \
    libwm           \
    libkey          \
    libmouse        \
    libjoy          \
    libscroll       \
    libbgload       \
    mod_scroll      \
    mod_mouse       \
    mod_map         \
    mod_video       \
    mod_screen      \
    mod_blendop     \
    mod_text        \
    mod_draw        \
    mod_grproc      \
    mod_effects     \
    mod_key         \
    mod_cd          \
    mod_dir         \
    mod_file        \
    mod_crypt       \
    mod_joy         \
    mod_math        \
    mod_mathi       \
    mod_mem         \
    mod_proc        \
    mod_rand        \
    mod_regex       \
    mod_say         \
    mod_sort        \
    mod_sound       \
    mod_string      \
    mod_sys         \
    mod_time        \
    mod_timers      \
    mod_path        \
    mod_wm          \
    mod_debug       \
    mod_flic        \
    mod_m7
